--- a/dictionaries/ru.po
+++ b/dictionaries/ru.po
@@ -52,15 +52,15 @@ msgstr "ничего не выбрано"
 
 msgctxt "base"
 msgid "components.organisms.MapView.filters.1"
-msgstr "{to} локация из {from}"
+msgstr "{to} объект из {from}"
 
 msgctxt "base"
 msgid "components.organisms.MapView.filters.2"
-msgstr "{to} локации из {from}"
+msgstr "{to} объекта из {from}"
 
 msgctxt "base"
 msgid "components.organisms.MapView.filters.3"
-msgstr "{to} локаций из {from}"
+msgstr "{to} объектов из {from}"
 
 msgctxt "base"
 msgid "constants.filters.labels.routes"
