--- a/dictionaries/ru.po
+++ b/dictionaries/ru.po
@@ -135,3 +135,11 @@ msgstr "Маршруты"
 msgctxt "base"
 msgid "constants.filters.labels.waterfall"
 msgstr "Водопады"
+
+msgctxt "base"
+msgid "hooks.useMapState.newPoint.description"
+msgstr "новая локация"
+
+msgctxt "base"
+msgid "hooks.useMapState.newPoint.name"
+msgstr "Неизвестное место"
