feat(map): move PlaceLink to separate component

--- a/dictionaries/ru.po
+++ b/dictionaries/ru.po
@@ -9,7 +9,7 @@ msgstr ""
 "PO-Revision-Date: 2022-04-23T00:00:00.000Z\n"
 
 msgctxt "base"
-msgid "components.atoms.MapPopup.tooltip.showOnGoogleMaps"
+msgid "components.atoms.PlaceLink.tooltip.showOnGoogleMaps"
 msgstr "Показать на Google Картах"
 
 msgctxt "base"
